[package]
name = "kernel-experiment"
version = "0.1.0"
authors = ["Dario Marzzucco <drrkermazyxokv@gmail.com>"]
edition = "2021"

[lib]
name = "experiment"
crate-type = ["staticlib"]

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.0"
rand = { version = "0.8", default-features = false }
